# shadow-role

./: .gitignore  README.md
backend/: README.md  env.example.txt  main.py  pyproject.toml  pytest.ini
backend/api/: __init__.py  authentication.py  dependencies.py  game.py  lobby.py  mission.py  player.py
backend/core/: config.py  database.py  password.py  security.py
backend/db/: database.py
backend/db/schemas/: __init__.py  game.py  lobby.py  mission.py  player.py  role.py  token.py  user.py
backend/models/: __init__.py  auth_token.py  game.py  lobby.py  mission.py  mission_assigned.py  mission_player.py  player.py  role.py  round.py  user.py
backend/repositories/: __init__.py  game_repository.py  gametype_repository.py  jwt_repository.py  lobby_repository.py  mission_repository.py  player_repository.py  role_repository.py  token_repository.py  user_repository.py
backend/routers/: authentication.py
backend/schemas/: __init__.py  game.py  game_type.py  lobby.py  mission.py  mission_assigned.py  player.py  round.py  token.py  user.py
backend/scripts/: README.md  __init__.py  drop_tables.py  recreate_tables.py
backend/services/: assignment_service.py  authentication.py  game_service.py  suggestion_service.py
backend/services/auth/: __init__.py  dependencies.py  link_builder.py  service.py  token_manager.py
backend/services/notifications/: __init__.py  dependencies.py  email_service.py  interface.py  smtp_client.py  template_manager.py
backend/tests/: README.md  __init__.py  conftest.py  test_auth_login.py  test_auth_me.py  test_auth_refresh.py  test_auth_register.py  test_db_connection.py
backend/utils/: normalize_datetime.py  password_hashing.py
backend/websocket/: connexion_manager.py  lobby_service.py  socket_server.py
docs/: README.md  (+4 more)
(+56 files in other folders)
