[project]
name = "shadow-role-backend"
version = "0.1.0"
description = "API RESTful for Shadow role web app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all,standard]>=0.120.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.19.0", # Driver async pour SQLite (développement)
    "asyncpg>=0.29.0", # Driver async pour PostgreSQL (production)
    "uvicorn>=0.38.0",
    "pwdlib[argon2]>=0.3.0",
]




[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
